fix(components/input-layout-inserted): correct hidden button styles #276

--- a/apps/doc/src/app/components/table/examples/table-editable-layouts-example/table-editable-layouts-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-editable-layouts-example/table-editable-layouts-example.component.html
@@ -5,7 +5,7 @@
         <th *prizmHead="'code'" [resizable]="true" [sorter]="null" prizmTh>Код</th>
         <th *prizmHead="'name'" [resizable]="true" prizmTh>Наименование</th>
         <th *prizmHead="'category'" [resizable]="true" prizmTh>Категория</th>
-        <th *prizmHead="'date'" [resizable]="true" prizmTh>Количество</th>
+        <th *prizmHead="'date'" [resizable]="true" prizmTh>Дата</th>
         <th class="head__actions" *prizmHead="'actions'" [sorter]="null" prizmTh></th>
       </tr>
     </thead>
