--- a/apps/doc/src/app/components/table/examples/table-editable-layouts-example/table-editable-layouts-example.component.less
+++ b/apps/doc/src/app/components/table/examples/table-editable-layouts-example/table-editable-layouts-example.component.less
@@ -3,41 +3,41 @@
     width: 100%;
   }
 
-  // .format {
-  //   &__number {
-  //     text-align: right;
-  //   }
-  // }
+  .format {
+    &__number {
+      text-align: right;
+    }
+  }
 
-  // td:has(.edit-buttons-container) {
-  //   padding: 0;
-  // }
+  td:has(.edit-buttons-container) {
+    padding: 0;
+  }
 
-  // .edit-buttons-container {
-  //   height: 100%;
-  //   width: 100%;
-  //   padding: 0 8px;
+  .edit-buttons-container {
+    height: 100%;
+    width: 100%;
+    padding: 0 8px;
 
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: center;
-  //   gap: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
 
-  //   .edit-buttons {
-  //     height: 16px;
-  //     width: 16px;
+    .edit-buttons {
+      height: 16px;
+      width: 16px;
 
-  //     display: flex;
+      display: flex;
 
-  //     &:hover {
-  //       color: #337eff;
-  //     }
-  //   }
-  // }
+      &:hover {
+        color: #337eff;
+      }
+    }
+  }
 
-  // .head {
-  //   &__actions {
-  //     width: 113px;
-  //   }
-  // }
+  .head {
+    &__actions {
+      width: 113px;
+    }
+  }
 }
