--- a/libs/components/src/lib/components/input/common/input-layout/input-layout-inserted.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout-inserted.component.less
@@ -39,6 +39,7 @@
   .prizm-input-button-default {
     display: flex;
     visibility: hidden;
+    --prizm-input-icon-button-width: 22px;
   }
 
   &:not(.disabled) {
