feat(components/input-layout-inserted): add styles for input icon buttons inserted #276

--- a/apps/doc/src/app/components/table/examples/table-editable-layouts-example/table-editable-layouts-example.component.html
+++ b/apps/doc/src/app/components/table/examples/table-editable-layouts-example/table-editable-layouts-example.component.html
@@ -27,6 +27,7 @@
             <input
               [disabled]="currentEditableRow !== item"
               [value]="item.name"
+              [prizmHintCanShow]="true"
               (click)="$event.stopPropagation()"
               (blur)="changeItemName($event, 'name')"
               prizmInput
