feat(components/input-layout): update logic for hiding cler btn #000

--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -28,6 +28,12 @@
       }
     }
   }
+
+  .prizm-input-form-empty {
+    .prizm-input-button-default {
+      visibility: hidden;
+    }
+  }
 }
 
 .label-container {
