--- a/apps/doc/src/app/components/card/card.component.html
+++ b/apps/doc/src/app/components/card/card.component.html
@@ -6,6 +6,10 @@
     <prizm-doc-example id="base" [content]="exampleBase" heading="Base">
       <prizm-card-base-example></prizm-card-base-example>
     </prizm-doc-example>
+
+    <prizm-doc-example id="shadow-provider" [content]="exampleProvider" heading="Provide Custom Shadow">
+      <prizm-card-shadow-provider-example></prizm-card-shadow-provider-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
