fix(components/input-layout-date-time): update calendar view after control value changed #2243

--- a/apps/doc/src/app/components/input/input-layout-date-range/examples/base/input-layout-date-range-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-range/examples/base/input-layout-date-range-base-example.component.html
@@ -8,3 +8,7 @@
   <div>max: {{ max?.toString() ?? '' }}</div>
   <div>value: {{ value?.value?.toString() ?? '' }}</div>
 </div>
+
+<br />
+<button (click)="setDefaultValue()" prizmButton>Set default value</button>
+<button (click)="clear()" prizmButton>Clear</button>
