--- a/apps/doc/src/app/components/input/input-layout-date-time-range/examples/base/input-layout-date-time-range-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time-range/examples/base/input-layout-date-time-range-base-example.component.html
@@ -11,3 +11,7 @@
   min: {{ min.toLocalNativeDate() }}
   max: {{ max.toLocalNativeDate() }}
 </pre>
+
+<br />
+<button (click)="setDefaultValue()" prizmButton>Set default value</button>
+<button (click)="clear()" prizmButton>Clear</button>
