--- a/apps/doc/src/app/components/input/input-layout-date/examples/base/input-layout-date-base-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date/examples/base/input-layout-date-base-example.component.html
@@ -1,3 +1,7 @@
 <prizm-input-layout label="Заголовок">
   <prizm-input-layout-date [formControl]="control"></prizm-input-layout-date>
 </prizm-input-layout>
+
+<br />
+<button (click)="setDefaultValue()" prizmButton>Set default value</button>
+<button (click)="clear()" prizmButton>Clear</button>
