fix(components/toast): fix max toast container width #000

--- a/libs/components/src/lib/components/toast/toast/toast.component.less
+++ b/libs/components/src/lib/components/toast/toast/toast.component.less
@@ -19,6 +19,7 @@
   .content-box {
     display: flex;
     width: 100%;
+    max-width: 425px;
     word-wrap: break-word;
     flex-flow: column;
     justify-content: space-between;
@@ -29,7 +30,6 @@
     }
     .content {
       color: var(--prizm-text-icon-secondary);
-      width: calc(100% - 72px);
     }
 
     .title {
