fix(components/input-layout): empty input with force clear btn fix #000

--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.html
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.html
@@ -109,6 +109,7 @@
             *ngSwitchCase="true"
             [interactive]="true"
             [class.alone]="!showStatusButton"
+            [class.force-clear]="forceClear"
             [disabled]="$.disabled"
             [prizmInputIconButton]="$any(clearButton) ?? 'delete-content'"
             [prizmHint]="$.inputLayout | prizmPluck : ['clear']"
