--- a/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout.component.less
@@ -30,7 +30,7 @@
   }
 
   .prizm-input-form-empty {
-    .prizm-input-button-default {
+    .prizm-input-button-default:not(.force-clear) {
       visibility: hidden;
     }
   }
