--- a/libs/components/src/lib/components/input/common/input-layout/input-layout-inserted.component.less
+++ b/libs/components/src/lib/components/input/common/input-layout/input-layout-inserted.component.less
@@ -57,4 +57,10 @@
       }
     }
   }
+
+  .prizm-input-form-empty {
+    .prizm-input-button-default:not(.force-clear) {
+      visibility: hidden;
+    }
+  }
 }
