fix(components/switcher): add type button to switcher button #2254

--- a/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
+++ b/libs/components/src/lib/components/switcher/components/switcher-item/switcher-item.component.html
@@ -8,6 +8,7 @@
   [appearance]="appearanceDirective.appearance"
   [class.switcher_active_disabled]="isActive && isDisabled"
   [pseudoPressed]="isActive"
+  type="button"
   prizmButton
 >
   <div #prizmHasValue="prizmHasValue" prizmHasValue>
@@ -24,6 +25,7 @@
     [size]="size"
     [appearanceType]="appearanceTypeDirective.appearanceType"
     [appearance]="appearanceDirective.appearance"
+    type="button"
     prizmIconButton
   ></button>
 </ng-container>
