fix(components/combobox): open on clear #0

--- a/libs/components/src/lib/components/dropdowns/combobox/combobox.component.html
+++ b/libs/components/src/lib/components/dropdowns/combobox/combobox.component.html
@@ -53,6 +53,7 @@
         (prizmOnInit)="changeParentFocusedClass(true)"
         (ngModelChange)="searchEmit($event)"
         (focus)="focused$$.next(true)"
+        (keypress)="safeOpenClosedModal()"
         (blur)="onTouch(); focused$$.next(false)"
         prizmAutoFocus
         prizmInput
