--- a/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
+++ b/apps/doc/src/app/components/input/input-chips/input-chips-example.component.html
@@ -54,6 +54,7 @@
               [chips]="chips"
               [deletable]="deletable"
               [disabled]="disabled"
+              [hintCanShow]="hintCanShow"
               prizmDocHostElementKey="PrizmChipsComponent"
               prizm-input-bottom
             >
