feat(components/input-layout-date-time): add ability to custumise customise time dropddown #1140

--- a/apps/doc/src/app/components/input/input-layout-date-time/input-layout-date-time.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time/input-layout-date-time.component.html
@@ -26,6 +26,10 @@
     <prizm-doc-example id="native-date" [content]="exampleNative" heading="Native Date">
       <prizm-input-layout-date-time-native-example></prizm-input-layout-date-time-native-example>
     </prizm-doc-example>
+
+    <prizm-doc-example id="custom-time" [content]="exampleCustomTimePicker" heading="Custom Time Picker">
+      <prizm-input-layout-date-time-custom-time-picker-example></prizm-input-layout-date-time-custom-time-picker-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
