feat(components/input-layout-time): add ability to customise time dropddown #1140

--- a/apps/doc/src/app/components/input/input-layout-date-time/examples/custom-time-picker/input-layout-date-time-custom-time-picker-example.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time/examples/custom-time-picker/input-layout-date-time-custom-time-picker-example.component.html
@@ -27,6 +27,6 @@
     [minTime]="$any(control.value && control.value[0].daySame(min[0]) ? min[1] : null)"
     [maxTime]="$any(control.value && control.value[0].daySame(max[0]) ? max[1] : null)"
     (timeChanged)="dateTime.onTimeSelected($event)"
-    (canceled)="dateTime.openTimeDropdown(false)"
+    (canceled)="dateTime.toggleTimeDropdown(false)"
   ></prizm-time-picker>
 </ng-template>
