--- a/apps/doc/src/app/components/input/input-layout-time/input-layout-time.component.html
+++ b/apps/doc/src/app/components/input/input-layout-time/input-layout-time.component.html
@@ -4,16 +4,20 @@
       <prizm-input-layout-time-base-example></prizm-input-layout-time-base-example>
     </prizm-doc-example>
 
-    <prizm-doc-example id="base" [content]="exampleWithSeconds" heading="With Seconds">
+    <prizm-doc-example id="withSeconds" [content]="exampleWithSeconds" heading="With Seconds">
       <prizm-input-layout-time-with-seconds-example></prizm-input-layout-time-with-seconds-example>
     </prizm-doc-example>
 
-    <prizm-doc-example id="base" [content]="exampleWithMicroSeconds" heading="With Micro Seconds">
+    <prizm-doc-example id="withMicroSeconds" [content]="exampleWithMicroSeconds" heading="With Micro Seconds">
       <prizm-input-layout-time-with-ms-example></prizm-input-layout-time-with-ms-example>
     </prizm-doc-example>
 
-    <prizm-doc-example id="base" [content]="exampleWithPreset" heading="With Preset">
+    <prizm-doc-example id="preset" [content]="exampleWithPreset" heading="With Preset">
       <prizm-input-layout-time-with-preset-example></prizm-input-layout-time-with-preset-example>
+    </prizm-doc-example>
+
+    <prizm-doc-example id="customTomePicker" [content]="exampleCustomTimePicker" heading="Custom Time Picker">
+      <prizm-input-layout-time-custom-time-picker-example></prizm-input-layout-time-custom-time-picker-example>
     </prizm-doc-example>
   </ng-template>
 
