--- a/apps/doc/src/app/components/input/input-layout-date-time-range/input-layout-date-time-range.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time-range/input-layout-date-time-range.component.html
@@ -13,6 +13,13 @@
     <prizm-doc-example id="native" [content]="exampleNativeDate" heading="Native Date Transformer">
       <prizm-input-layout-date-time-range-native-example></prizm-input-layout-date-time-range-native-example>
     </prizm-doc-example>
+    <prizm-doc-example
+      id="custom-time-picker"
+      [content]="exampleCustomTimePicker"
+      heading="Custom Time Picker"
+    >
+      <prizm-input-layout-date-time-range-custom-time-picker-example></prizm-input-layout-date-time-range-custom-time-picker-example>
+    </prizm-doc-example>
   </ng-template>
 
   <ng-template prizmDocPageTab prizmDocHost>
