feat(doc/input-layout-time): add property to live demo #000

--- a/apps/doc/src/app/components/input/input-layout-date-time/input-layout-date-time.component.html
+++ b/apps/doc/src/app/components/input/input-layout-date-time/input-layout-date-time.component.html
@@ -147,6 +147,14 @@
       >
         Time Mode
       </ng-template>
+
+      <ng-template
+        documentationPropertyName="timePickerTemplate"
+        documentationPropertyType="TemplateRef"
+        documentationPropertyMode="input"
+      >
+        Custom Time Picker Template
+      </ng-template>
     </prizm-doc-documentation>
     <prizm-doc-documentation [heading]="layoutKey" [hostComponentKey]="layoutKey">
       <ng-template
