--- a/apps/doc/src/app/components/input/input-layout-time/input-layout-time.component.html
+++ b/apps/doc/src/app/components/input/input-layout-time/input-layout-time.component.html
@@ -100,6 +100,14 @@
       </ng-template>
 
       <ng-template
+        documentationPropertyName="timePickerTemplate"
+        documentationPropertyType="TemplateRef"
+        documentationPropertyMode="input"
+      >
+        Custom Time Picker Template
+      </ng-template>
+
+      <ng-template
         documentationPropertyName="itemSize"
         documentationPropertyType="PrizmSizeS | PrizmSizeL | PrizmSizeM"
         documentationPropertyMode="input"
