feat(components/combobox): added support autcomplete mode #0

--- a/apps/doc/src/app/components/input/combobox/combobox-example.component.html
+++ b/apps/doc/src/app/components/input/combobox/combobox-example.component.html
@@ -24,6 +24,9 @@
     >
       <prizm-combobox-missing-value-handler-example></prizm-combobox-missing-value-handler-example>
     </prizm-doc-example>
+    <prizm-doc-example id="autocomplete-mode" [content]="exampleAutoCompleteMode" heading="Autocomlete Mode">
+      <prizm-combobox-autocomplete-mode-example></prizm-combobox-autocomplete-mode-example>
+    </prizm-doc-example>
     <prizm-doc-example id="virtual-scroll" [content]="exampleVirtualScroll" heading="Virtual Scroll">
       <prizm-combobox-virtual-scroll-example></prizm-combobox-virtual-scroll-example>
     </prizm-doc-example>
