fix(components/combobox): fix bugs from tester #0

--- a/apps/doc/src/app/components/input/combobox/combobox-example.component.html
+++ b/apps/doc/src/app/components/input/combobox/combobox-example.component.html
@@ -214,7 +214,7 @@
         [documentationPropertyValues]="itemsVariants"
         documentationPropertyName="items"
         documentationPropertyType="T[]"
-        documentationPropertyMode="input"
+        documentationPropertyMode="input-output"
       >
         Items
       </ng-template>
