--- a/apps/doc/src/app/components/navigation-menu/examples/navigation-menu-basic-example/navigation-menu-basic-example.component.html
+++ b/apps/doc/src/app/components/navigation-menu/examples/navigation-menu-basic-example/navigation-menu-basic-example.component.html
@@ -8,7 +8,7 @@
       [emptyDataMessageConfig]="{
         title: 'Нет никаких данных',
         subtitle:
-          'По дефолту это сообщение не выводится. Но при желании можно сконфигурировать. \n\n А за сообщение поиска отличает свойство [emptySearchResultMessageConfig]',
+          'По дефолту это сообщение не выводится. Но при желании можно сконфигурировать. \n\n А за сообщение поиска отвечает свойство [emptySearchResultMessageConfig]',
       }"
     ></prizm-navigation-menu>
   </section>
